--- a/BookStoreApp/appsettings.json
+++ b/BookStoreApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppDbConnection": "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -18,7 +22,7 @@
       },
       {
         "Name": "Seq",
-        "Args": { "serverUrl":  "http://localhost:5341" }
+        "Args": { "serverUrl": "http://localhost:5341" }
       }
     ]
   },
